# MyCommet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  index.html
.github/workflows/: benchmark.yml  build.yml  integration-test.yml  release.yml
commet/: .gitignore  pubspec.yaml
commet/android/app/: build.gradle
commet/integration_test/: runner.dart
commet/integration_test/extensions/: common_flows.dart  (+1 more)
commet/lib/: main.dart
commet/macos/: Podfile
commet/scripts/: build_release.dart  prepare-web.sh  setup_android_release.dart
commet/unit_test/: account_prefix_test.dart  assignable_roles_test.dart  backoff_delay_test.dart  debounce_test.dart  decrypt_retry_plan_test.dart  draft_store_test.dart  duration_format_test.dart  enter_key_action_test.dart  file_size_format_test.dart  formatting_shortcut_test.dart  homeserver_input_test.dart  in_memory_cache_test.dart  lightbox_transforms_test.dart  lod_image_type_test.dart  markdown_wrap_test.dart  matrix_permalink_test.dart  message_semantic_label_test.dart  notifying_list_events_test.dart  notifying_list_filter_test.dart  notifying_list_mapped_test.dart  power_levels_content_test.dart  reaction_semantic_label_test.dart  reactor_list_format_test.dart  redecrypt_message_test.dart  room_indicator_test.dart  room_shortcut_image_test.dart  search_query_test.dart  search_result_merge_test.dart  semantic_label_test.dart  text_diff_test.dart  time_format_test.dart  uia_stage_test.dart
dev/bench/: data.js
docs/: development.md  session-summary-2026-06.md
scripts/: create_epics.py  create_issues.py
(+161 files in other folders)
